Добавил приоритетную очередь для организации честности поедания блюд, а также заменил платформенные потоки для программистов и официантов на виртуальные